# screeps

./: .eslintignore  .eslintrc.js  .eslintrc.js-old  .gitignore  .prettierignore  .prettierrc.toml  Cargo.toml  README.md  TODO.md  biome.json  flake.nix  package-lock.json  package.json  rollup.config.js  screeps  screeps-multimeter.json  test.js  tsconfig.json
docs/: README.md  modules.md
docs/classes/: utils_errormapper.errormapper.md  utils_errors.creepmemoryerror.md  utils_errors.creeprolememoryerror.md  utils_errors.getbyiderror.md  utils_errors.getpositionerror.md  utils_errors.invalidcreeproleerror.md  utils_errors.invalidcreeptaskerror.md  utils_errors.roommemoryerror.md  utils_errors.scripterror.md  utils_errors.spawnmemoryerror.md
docs/enums/: types.creeprole.md  types.creeptask.md  types.infotype.md  types.linkmode.md  (+1 more)
js/: deploy.js  main.js
notes/: mining.jl
server/: config.yml
src/: actions.ts  construct.ts  creepMemory.ts  creeps.ts  expansion.ts  initialize.ts  jobsManager.ts  kernel.ts  labs.ts  lib.rs  links.ts  logging.rs  logistics.ts  main.ts  mapVisuals.ts  memory.rs  messenger.ts  misc.ts  overlay.ts  planner.ts  population.ts  process.ts  processTable.ts  roomMemory.ts  roomVisuals.ts  rooms.ts  scheduler.ts  scouting.ts  screeps.d.ts  serializer.ts  spawning.ts  spawns.ts  terminalMemory.ts  terminals.ts  testing.ts  towers.ts  types.d.ts
src/planner/: Cargo.toml  Cargo.toml.d.ts  README.md  architect.rs  index.ts  mod.rs  pathfinder.rs  room_data.rs
src/planner/src/: api.rs  architect.rs  lib.rs  pathfinder.rs  room_data.rs
(+87 files in other folders)
