[package]
name = "planner"
version = "0.1.0"
edition = "2021"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
offline = []

[[bin]]
name = "plan_room"
required-features = ["offline"]

[dependencies]
wasm-bindgen = "0.2.100"
screeps-game-api = "0.23.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz-str = "0.2.1"
